CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LOAN_SKU_SRV)

ADD_COMPILE_OPTIONS(-std=c++11 -g -Wall -O2 -lpthread)

SET(CMAKE_SKIP_RULE_DEPENDENCY TRUE)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} SOURCE_CPP)
list(APPEND SOURCE_CPP ${COMM_CPP})

SET(INC_PATH ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${INC_PATH})

add_executable(server ${SOURCE_CPP})

